@@ -201,13 +201,13 @@ SCHEDULER_GANTT_HOLE_MINIMUM_TIME="300"
 
 # You can add an order preference on resources assigned by the
 # system(SQL ORDER syntax)
-SCHEDULER_RESOURCE_ORDER="scheduler_priority ASC, suspended_jobs ASC, switch ASC, network_address DESC, resource_id ASC"
+SCHEDULER_RESOURCE_ORDER="scheduler_priority ASC, suspended_jobs ASC, network_address DESC, resource_id ASC"
 
 # If next line is uncommented then OAR will automatically update the value of "scheduler_priority"
 # field corresponding to the besteffort jobs.
 # The syntax is field names separated by "/". The value affected to "scheduler_priority" depends
 # of the position of the field name.
-SCHEDULER_PRIORITY_HIERARCHY_ORDER="switch/network_address/cpu"
+SCHEDULER_PRIORITY_HIERARCHY_ORDER="network_address/resource_id"
 
 # You can specify a type of resources that will be always assigned for each job
 # (for exemple: enable all jobs to be able to log on the cluster frontales)
