@@ -32,6 +32,11 @@ upstream development version:
   - Add job walltime (in seconds) in parameter of prologue and epilogue on
     compute nodes.
   - oarnodes does not show system properties anymore.
+  - It is now possible to have containers for jobs (sub scheduling in 1 job).
+      oarsub -t container ....
+      oarsub -t inside=42
+      oarsub -t inside=42
+      ...
 
 version 2.2.11:
 ---------------
